Fixed covers images

--- a/src/components/grid/styles.css
+++ b/src/components/grid/styles.css
@@ -1,6 +1,7 @@
 .cell {
   position: relative;
   background-size: cover;
+  /* content: url(../../img/Yumlato/yumlatoCover960.jpg); */
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -60,7 +61,7 @@
   left: 0px;
   width: 100%;
   height: 100%;
-  background: #ffffffa0;
+  /* background: #ffffffa0; */
   color: white;
   padding: 20px;
   font-weight: 100;
@@ -123,7 +124,21 @@
 
 .grid {
   flex: 1;
+  scrollbar-width: thin;          /* "auto" or "thin"  */
+  scrollbar-color: rgba(0, 0, 0, 0.4) transparent; 
 }
+.grid::-webkit-scrollbar {
+  width: 8px;               /* width of the entire scrollbar */
+}
+.grid::-webkit-scrollbar-track {
+  background: transparent;        /* color of the tracking area */
+}
+.grid::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.4);    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid transparent;  /* creates padding around scroll thumb */
+}
+
 
 .ant-btn-primary {
   background-color: #ca6a9a !important;
